@@ -1,48 +1,64 @@
 package org.apache.solr.handler.component;
 
-import com.github.benmanes.caffeine.cache.Caffeine;
 import java.lang.invoke.MethodHandles;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
+import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
 import org.apache.solr.client.solrj.impl.LBSolrClient;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.params.ShardParams;
-import org.apache.solr.common.util.ExecutorUtil;
-import org.apache.solr.common.util.SolrNamedThreadFactory;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+/**
+ * A {@link HttpShardHandler} that detects slow nodes and times out requests to them if applicable.
+ *
+ * <p>Should only be used for SearchHandler
+ */
 class TimeLimitingHttpShardHandler extends HttpShardHandler {
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
   private final long slowNodeTimeout;
   private final boolean dryRun;
 
-  private final ConcurrentMap<ShardRequest, List<ShardRequestActor>> actorsByShardRequest = Caffeine.newBuilder().weakKeys().<ShardRequest, List<ShardRequestActor>>build().asMap();
+  private final ConcurrentMap<ShardRequest, ShardRequestTracker> activeShardRequests =
+      new ConcurrentHashMap<>();
 
   private final SlowNodeDetector slowNodeDetector;
   private final TimeoutCallback timeoutCallback;
+  private final ExecutorService executorService;
 
+  /**
+   * @param slowNodeTimeout how long in milliseconds to wait before timing out (cancelling) requests
+   *     to slow nodes
+   * @param dryRun whether to actually cancel the pending requests or just log the cancellation
+   * @param slowNodeDetector detector implementation to detect slow nodes
+   * @param timeoutCallback callback to be invoked when timeout is reached, whether the pending
+   *     requests are cancelled due to dryRun mode
+   * @param executorService executor service (thread pool) to execute actor tasks with
+   */
   TimeLimitingHttpShardHandler(
       HttpShardHandlerFactory shardHandlerFactory,
       long slowNodeTimeout,
       boolean dryRun,
       SlowNodeDetector slowNodeDetector,
-      TimeoutCallback timeoutCallback) {
+      TimeoutCallback timeoutCallback,
+      ExecutorService executorService) {
     super(shardHandlerFactory);
     this.slowNodeTimeout = slowNodeTimeout;
     this.dryRun = dryRun;
     this.slowNodeDetector = slowNodeDetector;
     this.timeoutCallback = timeoutCallback;
+    this.executorService = executorService;
   }
 
   @Override
@@ -51,77 +67,104 @@ class TimeLimitingHttpShardHandler extends HttpShardHandler {
       ShardRequest shardRequest,
       List<String> shardUrls,
       ModifiableSolrParams params) {
-    ShardRequestTrackingCallback callback =
-        new ShardRequestTrackingCallback(future, shardRequest, shardUrls);
-    List<ShardRequestActor> shardRequestActors =
-        actorsByShardRequest.computeIfAbsent(
+    boolean shardsTolerant =
+        shardRequest.params != null && ShardParams.getShardsTolerantAsBool(shardRequest.params);
+    ShardRequestTracker tracker =
+        activeShardRequests.computeIfAbsent(
             shardRequest,
             k -> {
               List<ShardRequestActor> actors = new ArrayList<>();
               actors.add(new NodeStatsCollector(slowNodeDetector));
-              if ("true".equalsIgnoreCase(shardRequest.params.get(ShardParams.SHARDS_TOLERANT))) {
+              if (shardsTolerant) {
                 actors.add(
                     new SlowNodeTimeoutActor(
-                        slowNodeTimeout, dryRun, slowNodeDetector.getSlowNodes(), timeoutCallback));
+                        slowNodeTimeout,
+                        dryRun,
+                        slowNodeDetector.getSlowNodes(),
+                        timeoutCallback,
+                        executorService));
               }
-              return actors;
+              return new ShardRequestTracker(actors);
             });
-    shardRequestActors.forEach(actor -> actor.onRequestSubmitted(shardUrls, future));
-    return callback;
+
+    tracker.outstandingRequestCount.incrementAndGet();
+    tracker.actors.forEach(actor -> actor.onRequestSubmitted(shardUrls, future));
+
+    return new ShardRequestTrackingCallback(
+        future, shardRequest, tracker, shardsTolerant, shardUrls);
   }
 
   /**
-   * Callback to track ShardRequest and a Future created by sending such request to a single shard.
+   * Callback to track ShardRequest and a Future created by sending such request to a single shard
+   * URL.
    *
    * <p>Take note that the ShardRequest can be reused/shared by sending to many different shards.
    * Therefore, we need this class as a reference back to the corresponding ShardRequest when such
    * future is completed.
    */
-  class ShardRequestTrackingCallback
-      implements HttpShardHandler
-          .ShardRequestCallback { // TODO maybe use a name that indicates we assume using Slow node
-    // canceller for this
+  class ShardRequestTrackingCallback implements HttpShardHandler.ShardRequestCallback {
     private final ShardRequest shardRequest;
     private final Future<LBSolrClient.Rsp> future;
+    private final ShardRequestTracker tracker;
     private final List<String> shardUrls;
+    private final boolean shardsTolerant;
 
     ShardRequestTrackingCallback(
-        Future<LBSolrClient.Rsp> future, ShardRequest shardRequest, List<String> shardUrls) {
+        Future<LBSolrClient.Rsp> future,
+        ShardRequest shardRequest,
+        ShardRequestTracker tracker,
+        boolean shardsTolerant,
+        List<String> shardUrls) {
       this.future = future;
       this.shardRequest = shardRequest;
+      this.tracker = tracker;
       this.shardUrls = shardUrls;
+      this.shardsTolerant = shardsTolerant;
     }
 
     @Override
     public void onResponse(LBSolrClient.Rsp response, long elapsedTime) {
-      onComplete(elapsedTime, response.getServer());
+      onComplete(elapsedTime, response.getServer(), false);
     }
 
     @Override
     public void onException(Throwable exception, long elapsedTime) {
       // TODO is it possible to infer the selected node? If it has timed out, perhaps we can assume
       // all shardNodes are slow?
-      onComplete(elapsedTime, null);
+      onComplete(elapsedTime, null, true);
     }
 
-    private void onComplete(long elapsedTime, String selectedShardUrl) {
+    private void onComplete(long elapsedTime, String selectedShardUrl, boolean isException) {
       try {
-        actorsByShardRequest.compute(
-            shardRequest,
-            (k, actors) -> {
-              if (actors != null) {
-                actors.removeIf(
-                    actor ->
-                        actor.onRequestCompleted(selectedShardUrl, shardUrls, future, elapsedTime));
-                if (actors.isEmpty()) {
-                  return null;
-                }
-              }
-              return actors;
-            });
+        tracker.actors.forEach(
+            actor -> actor.onRequestCompleted(selectedShardUrl, shardUrls, future, elapsedTime));
+        int outstandingRequestCount = tracker.outstandingRequestCount.decrementAndGet();
+        if (isLastResponse(isException, outstandingRequestCount)) {
+          tracker.actors.forEach(ShardRequestActor::close);
+
+          // there could be some race condition here but benign
+          // (other thread triggers onRequestSubmit on actors which are already closed etc)
+          activeShardRequests.remove(shardRequest);
+        }
       } catch (Exception e) {
         log.warn("Failed to notify stats to slowNodeDetector", e);
       }
+    }
+
+    private boolean isLastResponse(boolean isException, int outstandingRequestCount) {
+      if (!shardsTolerant && isException) {
+        return true;
+      }
+      return outstandingRequestCount <= 0;
+    }
+  }
+
+  static class ShardRequestTracker {
+    final List<ShardRequestActor> actors;
+    final AtomicInteger outstandingRequestCount = new AtomicInteger(0);
+
+    ShardRequestTracker(List<ShardRequestActor> actors) {
+      this.actors = actors;
     }
   }
 }
@@ -130,17 +173,33 @@ class TimeLimitingHttpShardHandler extends HttpShardHandler {
 interface ShardRequestActor {
   void onRequestSubmitted(List<String> shardUrls, Future<?> future);
 
-  boolean onRequestCompleted(
+  void onRequestCompleted(
       String selectedShardUrl, List<String> shardUrls, Future<?> future, long timeElapsed);
+
+  /**
+   * Close and flush when the last response is received.
+   *
+   * <p>This happens either when all previously submitted requests are completed (no in-flight
+   * requests) or an exception occurred while the handler is not shard fault-tolerant
+   *
+   * <p>After close is invoked, it is expected that no further method calls be submitted to the Actor.
+   * However, in some rare cases, more calls could arrive after closing, the implementation
+   * should ensure that it triggers no errors, the rest of the behaviors are undefined.
+   *
+   * <p>Take note though unlikely, there could be pauses with request submissions such that close
+   * is triggered before all the requests for a particular ShardRequest are submitted. In such case,
+   * a new actor should be instantiated to handle the rest of the requests submission and completion.
+   */
+  void close();
 }
 
 class Util {
   static String getNode(String urlString) {
     try {
-      URL url = new URL(urlString);
-      return url.getAuthority();
-    } catch (MalformedURLException e) {
-      throw new IllegalArgumentException("Invalid URL: " + urlString, e);
+      URI uri = new URI(urlString);
+      return uri.getAuthority();
+    } catch (URISyntaxException e) {
+      throw new IllegalArgumentException("Invalid URI: " + urlString, e);
     }
   }
 }
@@ -152,9 +211,7 @@ class Util {
  * when all of them complete
  */
 class NodeStatsCollector implements ShardRequestActor {
-  private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
   private final SlowNodeDetector detector;
-  private final AtomicInteger pendingCount = new AtomicInteger(0);
   final RequestStats stats = new RequestStats();
 
   NodeStatsCollector(SlowNodeDetector detector) {
@@ -162,23 +219,20 @@ class NodeStatsCollector implements ShardRequestActor {
   }
 
   @Override
-  public void onRequestSubmitted(List<String> shardUrls, Future<?> future) {
-    pendingCount.incrementAndGet();
-  }
+  public void onRequestSubmitted(List<String> shardUrls, Future<?> future) {}
 
   @Override
-  public synchronized boolean onRequestCompleted(
+  public synchronized void onRequestCompleted(
       String selectedShardUrl, List<String> shardUrls, Future<?> future, long timeElapsed) {
     if (selectedShardUrl != null) { // might be null if exception occurred
       stats.recordLatency(Util.getNode(selectedShardUrl), timeElapsed);
     }
-    if (pendingCount.decrementAndGet() == 0) {
-      detector.notifyRequestStats(
-          stats); // notify the slowNodeDetector of the execution stats of all the submissions by
-      // this shard request
-      return true;
-    }
-    return false;
+  }
+
+  @Override
+  public synchronized void close() {
+    detector.notifyRequestStats(stats);
+    stats.clear();
   }
 }
 
@@ -187,7 +241,8 @@ class NodeStatsCollector implements ShardRequestActor {
  *
  * <p>This actor keeps a list of pending future for all in-flight request submissions. When all the
  * remaining pending futures are from the slowNodes list, start a timer task to timeout/cancel all
- * of them according to the timeout value (only prints a message if dryRun is true)
+ * of them according to the timeout value (do not time out and only print a message if dryRun is
+ * true)
  */
 class SlowNodeTimeoutActor implements ShardRequestActor {
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
@@ -197,25 +252,46 @@ class SlowNodeTimeoutActor implements ShardRequestActor {
   private final Set<String> slowNodes;
   private final AtomicInteger pendingFutureCountFromFastNode = new AtomicInteger(0);
   private final TimeoutCallback timeoutCallback;
-  private volatile Future<?> timeoutTask = null;
+  private final ExecutorService executorService;
 
+  // if non-null, then there is an active count down to cancel pending requests once timeout elapsed
+  private volatile CountDownLatch cancelCountDownLatch;
+
+  /**
+   * A ShardRequestActor that times out all pending requests if all of them are from slow nodes.
+   * Each instance of this class is tied to a single ShardRequest instance, which can be
+   * retried/submitted to many shard urls.
+   *
+   * @param timeout timeout in milliseconds, if all pending requests remain are from slow nodes, a
+   *     task to cancelled all pending requests will be scheduled with this timeout as delay
+   * @param dryRun whether to actually cancel the pending requests or just log the cancellation
+   * @param slowNodes set of slow nodes, this should not change during the lifetime of this actor
+   * @param timeoutCallback callback to be invoked when timeout is reached, whether the pending
+   *     requests are cancelled due to dryRun mode
+   * @param executorService executor service to run the timeout task
+   */
   SlowNodeTimeoutActor(
-      long timeout, boolean dryRun, Set<String> slowNodes, TimeoutCallback timeoutCallback) {
+      long timeout,
+      boolean dryRun,
+      Set<String> slowNodes,
+      TimeoutCallback timeoutCallback,
+      ExecutorService executorService) {
     this.timeout = timeout;
     this.dryRun = dryRun;
     this.slowNodes = slowNodes;
     this.timeoutCallback = timeoutCallback;
+    this.executorService = executorService;
   }
 
   @Override
-  public void onRequestSubmitted(List<String> shardUrls, Future<?> future) {
+  public synchronized void onRequestSubmitted(List<String> shardUrls, Future<?> future) {
     pendingFutures.add(future);
 
-    // if any of the shard URLs is from a slow node, then we don't count it as a fast node future as
-    // it could potentially be slow
-    // This is done such that we can more effectively terminate pending futures with a mix of slow
-    // and fast nodes for
-    // the same shard.
+    // This is a shardRequest being submitted to a single shard. However with multiple replicas,
+    // there will be multiple shard URLs.
+    // if any of those replicas are from a known slow node, then we will NOT count this pending
+    // future as a "fast node future". Therefore, we assume this future can be potentially slow
+    // and subjected to timeout.
     if (!hasSlowNodeShardUrl(shardUrls)) {
       pendingFutureCountFromFastNode.incrementAndGet();
     }
@@ -231,72 +307,60 @@ class SlowNodeTimeoutActor implements ShardRequestActor {
   }
 
   @Override
-  public synchronized boolean onRequestCompleted(
+  public synchronized void onRequestCompleted(
       String selectedShardUrl, List<String> shardUrls, Future<?> future, long timeElapsed) {
     pendingFutures.remove(future);
-    if (pendingFutures.isEmpty()) { // every submitted futures are processed
-      if (timeoutTask != null) {
-        timeoutTask.cancel(true);
-      }
-      return true;
-    }
-
     if (!hasSlowNodeShardUrl(shardUrls)) {
       pendingFutureCountFromFastNode.decrementAndGet();
     }
 
-    if (timeoutTask == null
-        && pendingFutureCountFromFastNode.get()
-            <= 0) { // all pending reqs are from slow nodes, start a timer to possibly timeout
-      ExecutorService executorService = null;
-      try {
-        executorService =
-            ExecutorUtil.newMDCAwareSingleThreadExecutor(
-                new SolrNamedThreadFactory("SlowNodeTimeout"));
-        timeoutTask =
-            executorService.submit(
-                () -> {
-                  try {
-                    Thread.sleep(timeout);
-                  } catch (InterruptedException e) {
-                    // ok. The responses came back before timeout
-                    return;
-                  }
-                  Set<Future<?>> removingFutures = new HashSet<>(pendingFutures);
-                  pendingFutures.clear();
-                  if (!removingFutures.isEmpty()) {
-                    if (timeoutCallback != null) {
-                      timeoutCallback.accept(removingFutures);
-                    }
-                    if (!dryRun) {
-                      if (log.isInfoEnabled()) {
-                        log.info(
-                            "Cancelling {} pending requests due to timeout duration {}ms exceeded. ",
-                            removingFutures.size(),
-                            timeout);
-                      }
-                      removingFutures.forEach(f -> f.cancel(true));
-                      if (log.isInfoEnabled()) {
-                        log.info("{} Pending requests cancelled", removingFutures.size());
-                      }
-                    } else {
-                      if (log.isInfoEnabled()) {
-                        log.info(
-                            "Dry-run mode: would have cancelled {} pending requests due to timeout duration {}ms exceeded",
-                            removingFutures.size(),
-                            timeout);
-                      }
-                    }
-                  }
-                });
-      } finally {
-        if (executorService != null) {
-          executorService.shutdown();
-        }
-      }
-    }
+    // all pending reqs are from slow nodes, start a countdown to possibly cancel those requests
+    if (cancelCountDownLatch == null && pendingFutureCountFromFastNode.get() <= 0) {
+      cancelCountDownLatch = new CountDownLatch(1);
+      executorService.submit(
+          () -> {
+            try {
+              if (cancelCountDownLatch.await(timeout, TimeUnit.MILLISECONDS)) {
+                return; // phew! All pending slow node requests completed before timeout
+              }
 
-    return false;
+              synchronized (SlowNodeTimeoutActor.this) {
+                if (!pendingFutures.isEmpty()) {
+                  if (timeoutCallback != null) {
+                    timeoutCallback.accept(pendingFutures);
+                  }
+                  if (!dryRun) {
+                    pendingFutures.forEach(f -> f.cancel(true));
+                    if (log.isInfoEnabled()) {
+                      log.info(
+                          "{} Pending requests cancelled due to timeout duration {}ms exceeded",
+                          pendingFutures.size(),
+                          timeout);
+                    }
+                  } else {
+                    if (log.isInfoEnabled()) {
+                      log.info(
+                          "Dry-run mode: would have cancelled {} pending requests due to timeout duration {}ms exceeded",
+                          pendingFutures.size(),
+                          timeout);
+                    }
+                  }
+                  pendingFutures.clear();
+                }
+              }
+            } catch (InterruptedException e) {
+              // ok
+            }
+          });
+    }
+  }
+
+  @Override
+  public synchronized void close() {
+    if (cancelCountDownLatch != null) {
+      cancelCountDownLatch.countDown();
+    }
+    pendingFutures.clear();
   }
 }
 
